--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -6,22 +6,23 @@
         <div class='row'>
             <div class='col-md-2'>Filter By:</div>
             <div class='col-md-4'>
-                <input type='text' />
+                <input type='text'
+                    [(ngModel)] = 'listFilter' />
             </div>
         </div>
         <div class='row'>
             <div class='col-md-6'>
-                <h4>Filtered By:</h4>
+                <h4>Filtered By: {{listFilter}}</h4>
             </div>
         </div>
         <div class='table-responsive'>
             <table class='table' *ngIf = 'products && products.length'>
                 <thead>
                     <tr>
-                        <button class='btn btn-primery'>
-                            Show Image
+                        <button class='btn btn-primary' (click)='toggleImage()'>
+                         {{showImage ? 'Hide' : 'Show'}} Image
                         </button>
-                        <th>Product</th>
+                        <th style="text-align:center">Product</th>
                         <th>Code</th>
                         <th>Available</th>
                         <th>Price</th>
@@ -30,16 +31,21 @@
                 </thead>
                 <tbody>
                         <tr *ngFor = 'let product of products'>
-                            <td></td>
-                            <td>{{product.productName}}</td>
+                            <td>
+                                <img *ngIf='showImage' 
+                                [src] = 'product.imageUrl'
+                                [title] = 'product.productName'
+                                [style.width.px]= 'imageWidth'
+                                [style.margin.px] = 'imageMargin'>
+                            </td>
+                            <td style="text-align:center">{{product.productName | uppercase }}</td>
                             <td>{{product.productCode}}</td>
                             <td>{{product.releaseDate}}</td>
-                            <td>{{product.price}}</td>
+                            <td>{{product.price | currency:'USD':'symbol':'1.2-2'}}</td>
                             <td>{{product.starRating}}</td>
                         </tr>
                    </tbody>
             </table>
         </div>
-
     </div>
 </div>
